--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="root">
-      <script type="module" src="./App.js"></script>
+      <h1>Not rendered</h1>
     </div>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
